style.css
/* ... */
.bg-light-purple{
    background-color: var(--first-tone-purple) !important;
}
.color-light-purple{
    color: var(--first-tone-purple);
}
.main-element{
    min-height: 70vh !important;
    display: grid !important;
    place-items: center !important;
}
#hamburger-icon-control{
    position: absolute;
    visibility: hidden;
}
.hamburger-icon{
    position: fixed;
    right: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 16px 10px;
    cursor: pointer;
}
.slash{
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 30px;
    height: 3px;
    overflow: visible;
    background-color: #ffffffba;
    transition: 1.1s ease;
}
.slash::before, .slash::after{
    content: '';
    position: absolute;
    width: 100%;
    height: 3px;
    background-color: #ffffffba;
    transition: 1.1s ease;
}
.slash::before{bottom: 8px;}
.slash::after{top: 8px;}

.hamburger-icon:hover .slash,
.hamburger-icon:hover .slash::before,
.hamburger-icon:hover .slash::after
{
    background-color: #ffffff;
}
#hamburger-icon-control:checked ~ .slash::before{
    bottom: 0;
    transform: rotate(90deg);
}
#hamburger-icon-control:checked ~ .slash::after{
    top: 0;
    transform: rotate(90deg);
}
#hamburger-icon-control:checked ~ .slash{
    transform: rotate(45deg);
}

header{
    position: fixed;
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 10px 5px;
    padding-left: 15px;
    width: 100%;
    overflow: visible;
    opacity: 1;
    z-index: 999999;
    background-color: #1e0d39;
    transition: opacity .5s, all .8s ease-out;
}
.disable-scrolling {
    overflow: hidden;
}  
nav{
    position: absolute;
    left: 50%;
    top: 50%;
    display: none;
    transform: translate(-50%, -50%);
    transition: .3s ease;
}
.brand{
    font-size: 30px;
    font-weight: 700;
    color:#fff;
}
ul{
    display: flex;
    justify-content: center;
    flex-direction: column;
    gap: 25px;
    padding: 0;
    text-align: center;
    list-style: none;
}
.nav-link{
    height: 38px;
}
span.links{
    text-align: center;
    text-decoration: none;
    font-size: 22px;
    color: #ffffffa7;
    text-transform: uppercase;
    cursor: pointer;
    transition: .3s ease;
}
.links[aria-current="page"],
.links:hover{
    color: #fff;
}

.language{
    position: absolute;
    bottom: 10vh;
    left: 50%;
    display: none;
    align-items: center;
    gap: 20px;
    transform: translate(-50%);
}
.language button{
    color: #828282;
    border: none;
    background-color: transparent;
    transition: .3s ease;
}

.language button.active{
    color: #ffffff;
}
button#portuguese{
    position: relative;
}
button#portuguese::after{
    content: '';
    position: absolute;
    top: 50%;
    right: -12.4px;
    transform: translate(-50%, -50%);
    width: 1.5px;
    height: 80%;
    background-color: #ffffff7a;
}
button#portuguese:hover,
button#english:hover{
    color: #ffffffcb;
}

main{
    position: relative;
    padding-top: 10em;
    padding-bottom: 5em;
    overflow: hidden;
}

.img-home{
    position: relative;
    width: 48vw;
    margin-bottom: 2em;
    overflow: visible;
}
.img-home img{
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 40vw;
    max-height: 348px;
    z-index: 10;
}
main .row{
    width: 98vw;
    max-width: 1100px;
    flex-wrap: nowrap;   
    transition: .5s ease;
}
.first-content-main{
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.text-content-main{
    display: flex;
    flex-direction: column;
    gap: 40px;
}
.my-name, .my-last-name{
    font-size: 5em;
    font-weight: 700;
    line-height: 20px;
    letter-spacing: 1.2px;
    color: var(--first-tone-purple);
}
.career{
    font-size: 24px;
    font-weight: 500;
    color: #ababab;
    z-index: 999;
}
span.buttons{
    display: flex;
    align-items: center;
    gap: 1.5em;
    margin-top: 4em;
}

button.download-cv-btn{
    width: 161px;
    height:46px;
    border: none;
    border-radius: 5px;
    scale: 1;
    color: #fff;
    background-color: var(--first-tone-purple);
    z-index: 999;
    transition: .5s ease;
}
.download-cv-btn:hover{
    scale: 1.05;
    background-color: var(--dark-light-purple);
}
button.linkedin-btn{
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 161px;
    height:46px;
    border: 1px solid var(--linkedin-color);
    border-radius: 5px;
    overflow: hidden;
    cursor: pointer;
    background-color: transparent;
    z-index: 999;
    transition: .8s all ease;
}
button.linkedin-btn span{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    margin-left: 20px;
}
button.linkedin-btn img{
    position: absolute;
    left: 10px;
    height: 25px;
    z-index:999;
    transition: 1s all ease;
}
.linkedin-btn::before{
    content: '';
    position: absolute;
    bottom: 0;
    width: 150%;
    height: 0;
    z-index: 5;
    background-color: var(--linkedin-color);
    transition: .5s all ease-out;
}
.linkedin-btn:hover::before{
    height:100%
}
.linkedin-btn::after{
    white-space: nowrap;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    margin-left: 18px;
    color: white;
    opacity: 0;
    z-index: 7;
    transition: .8s all ease;
}
.linkedin-btn.en::after{
    content: 'Open';
}
.linkedin-btn.pt::after{
    content: 'Abrir';
}

.linkedin-btn:hover::after{
    opacity: 1;
}
.linkedin-name{
    position: absolute;
    top: 50%;
    left: 50%; 
    transform: translate(-50%, -50%);
    color: white;
    z-index: -1;
}

span.linkedin-brand{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
}

#linkedin-home{
    color: var(--linkedin-color);
}
/* ... */

